--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -13,6 +13,7 @@
     .bannerWrapper {
       width: 100%;
       height: auto;
+      color: #5ea267;
 
       .banner {
         object-fit: cover;
