--- a/app/Components/MenuItem/MenuItem.module.scss
+++ b/app/Components/MenuItem/MenuItem.module.scss
@@ -19,12 +19,12 @@
 .menuText {
   margin-left: 10px;
   transition: color 0.3s;
-  color: #8f93a3;
+  color: white
 }
 
 .active {
   border-radius: 16px;
-  background: #c6dfbf21;
+  background: white;
 }
 
 .active .menuText {
