--- a/app/Components/TeammateBox/TeammateBox.module.scss
+++ b/app/Components/TeammateBox/TeammateBox.module.scss
@@ -25,7 +25,7 @@
         }
 
         .role {
-            color: var(--SecondaryDarkModeTExtCollor, #898989);
+            color: var(--SecondaryDarkModeTExtCollor, #00ffaa);
             text-align: center;
             font-family: Inter;
             font-size: 14px;
