--- a/app/Components/colors/Colors.scss
+++ b/app/Components/colors/Colors.scss
@@ -1,4 +1,4 @@
-$primary: #FF5F5F;
+$primary: #5fff82;
 $TextWhiteModeTextPrimary: #292929;
 $TextWhiteModeTextSecondary: #D6D6D6;
 $TextSecondaryDarkMode: #898989;
