--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-
   .content {
     width: 100%;
     display: flex;
@@ -34,6 +33,7 @@
       flex-direction: column;
       align-items: flex-start;
       gap: 20px;
+      margin-bottom: 100px;
 
       .issue {
         width: 100%;
